# xdcc-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml
src/: main.rs  package_downloader.rs
src/irc/: mod.rs  network.rs
src/irc/command/: mod.rs  xdcc.rs
src/irc/command/ctcp/: dcc.rs  mod.rs
