[package]
name = "xdcc-cli"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "^1"
chrono = "^0.4"
clap = { version = "4.3.2", features = ["derive"] }
env_logger = "^0.11"
futures = "^0.3"
lazy_static = "^1.4"
log = "^0.4"
regex = "^1.8"
tokio = { version = "^1", features = ["full", "sync", "rt"] }
tokio-util = { version = "^0.7", features = ["codec"] }
